<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sudoku</string>
    <string name="app_title">Android Sudoku</string>
    
    <string name="label_continue">Continue</string>
    <string name="label_new_game">New Game</string>
    <string name="label_about">About</string>
    <string name="label_exit">Exit</string>
    
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
    Sudoku is logic-based number placement puzzle.
    Starting with a partially completed 9x9 grid, 
    the objective is to fill the grid so that each
    row, each column, and each of the 3x3 boxes
    (alse called <i>blockes</i>) contains the digits.
    </string>
    
    <string name="setting_label">Settings</string>
    <string name="setting_title">Sudoku settings</string>
    <string name="setting_shortcut">s</string>
    
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    
    <string name="hint_title">Hints</string>
    <string name="hint_summary">Show hints during play</string>
    
    <string name="new_game_title">Difficulty</string>
    
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    
    <string name="return_title">Hint</string>
    <string name="return_text">Return to main menu</string>
</resources>
