<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/background"
    android:padding="30dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    
    	<TextView 
	    android:text="@string/app_title"
	    android:textSize="24.5sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginBottom="25dip"/>
	    
	    <Button 
	    android:id="@+id/button_continue"
	    android:text="@string/label_continue"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	    
	    <Button 
	    android:id="@+id/button_new_game"
	    android:text="@string/label_new_game"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"/>
	    
	    <Button 
	    android:id="@+id/button_about"
	    android:text="@string/label_about"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	    
	    <Button 
	    android:id="@+id/button_exit"
	    android:text="@string/label_exit"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	    
    </LinearLayout>
    
    
</LinearLayout>
